# PathCollab

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  BEADS_TESTING.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_2.md  LICENSE  QUICKSTART.md  README.md  TESTING.md  UX_REVIEW.md  docker-compose.yml  package.json
.beads/: issues.jsonl
.claude/: settings.json
.github/workflows/: ci.yml  perf.yml  release.yml  test.yml
bench/: README.md
bench/baselines/: tile_baseline.json  websocket_baseline.json
bench/load_tests/results/: .gitignore
bench/load_tests/scenarios/: combined_load.sh  overlay_stress.sh  ramp_test.sh  tile_stress.sh
bench/scripts/: compare_baseline.py  generate_report.py  run_all.sh
docs/: ENV_MATRIX.md  OVERLAY_FORMAT.md  overlay-manifest.schema.json
fixtures/: README.md
fixtures/demo-overlay/: manifest.json
fixtures/demo-slide/: metadata.json  slide.dzi
nginx/: nginx.conf
proto/: heatmaps.proto  new_cell_masks.proto  overlays.proto
scripts/: check-health.sh  check_perf_budgets.sh  dev-local.sh  format.sh  generate_fixtures.py  init-letsencrypt.sh  lint.sh  smoke-test.sh
server/: .benchmark-baseline.json  Cargo.toml  Dockerfile  build.rs
server/benches/: message_serialization.rs  spatial_index.rs  tile_encoding.rs
server/proto/: overlay.proto
server/src/: config.rs  lib.rs  main.rs  test_utils.rs
server/src/fovea/: mod.rs
server/src/overlay/: derive.rs  discovery.rs  index.rs  local.rs  mod.rs  parser.rs  reader.rs  reader_v2.rs  routes.rs  service.rs  types.rs
server/src/protocol/: messages.rs
server/src/server/: websocket.rs
server/src/session/: manager.rs  mod.rs  state.rs
server/src/slide/: cache.rs  local.rs  mod.rs  routes.rs  service.rs  tile_cache.rs  types.rs
server/tests/: integration.rs  perf_tests.rs
server/tests/common/: mod.rs
server/tests/load_tests/: benchmark.rs  client.rs  mod.rs
server/tests/load_tests/scenarios/: comprehensive.rs  fanout.rs  mod.rs  overlay.rs
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
web/e2e/: logging.ts  phase1.spec.ts  phase2.spec.ts  server-harness.ts  session.spec.ts  smoke.spec.ts  ws-client.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: ErrorBoundary.tsx
web/src/components/debug/: DebugPanel.tsx  index.ts
web/src/components/layout/: Sidebar.tsx  StatusBar.test.tsx  StatusBar.tsx  index.ts
web/src/components/session/: ActiveUsersList.tsx  SessionConnectionStatus.tsx  SessionFooter.tsx  ShareLinkSection.tsx  SlideSelector.tsx  index.ts
web/src/components/ui/: Button.tsx  CellOverlayToggle.tsx  EmptyState.tsx  ErrorBanner.tsx  FollowModeIndicator.tsx  KeyboardShortcutsHelp.tsx  KeyboardShortcutsHint.tsx  LayerControls.tsx  NetworkErrorBanner.tsx  OverlayControls.tsx  ReturnToPresenterButton.tsx  Toggle.tsx  index.ts
web/src/components/upload/: OverlayUploader.tsx
web/src/components/viewer/: CellOverlay.tsx  CellTooltip.tsx  CursorLayer.test.tsx  CursorLayer.tsx  FoveaViewer.tsx  LayerPanel.tsx  MinimapOverlay.test.tsx  MinimapOverlay.tsx  OverlayCanvas.tsx  SlideViewer.test.tsx  SlideViewer.tsx  TissueHeatmapLayer.tsx  ViewerArea.tsx  ViewportLoader.tsx  WebGLCellOverlay.tsx  WebGLHeatmapOverlay.tsx  WebGLTissueOverlay.tsx  foveaViewport.test.ts  foveaViewport.ts  index.ts
web/src/constants/: index.ts  overlayClasses.ts
web/src/hooks/: index.ts  useAutoCreateSession.ts  useAvailableSlides.ts  useCellOverlay.ts  useCellOverlayMeta.ts  useDefaultSlide.ts  useHashParams.ts  useHeatmapOverlay.ts  useKeyboardShortcuts.ts  useLayerVisibility.ts  useNetworkStatus.ts  useOverlayCells.ts  usePresence.test.ts  usePresence.ts  useSession.test.ts  useSession.ts  useShareUrl.ts  useSlideInfo.ts  useTissueOverlay.ts  useViewerViewport.ts  useWebSocket.test.ts  useWebSocket.ts
web/src/pages/: Home.tsx  Session.tsx
web/src/styles/: tokens.css
web/src/test/: fixtures.ts  setup.ts  utils.tsx
web/src/types/: overlay.ts
web/src/utils/: TissueTileIndex.test.ts  TissueTileIndex.ts  triangulate.ts
(+4 files in other folders)
