[workspace]
resolver = "2"
members = ["server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/pathcollab/pathcollab"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "compression-gzip", "set-header"] }

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
