[package]
name = "pathcollab-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PathCollab collaborative slide viewer server"

[lib]
name = "pathcollab_server"
path = "src/lib.rs"

[[bin]]
name = "pathcollab"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
futures-util = "0.3"
prost.workspace = true
prost-types.workspace = true
rstar.workspace = true
sha2 = "0.10"
bytes = "1"
async-trait = "0.1"

# Slide reading (local OpenSlide mode)
openslide-rs = { version = "2", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Metrics / Observability
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
tokio-tungstenite = "0.26"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[build-dependencies]
prost-build = "0.13"
